# large-language-models

./: .dockerignore  .gitignore  404.html  6_states.ipynb  7_summary.ipynb  9_documents.ipynb  Dockerfile  README.md  index.html  main.py  mkdocs.yml  prompting_exercise.ipynb  pyproject.toml  requirements-docs.txt  requirements-handson.txt  requirements.txt  sitemap.xml  utils.py
.github/workflows/: deploy.yml  publish.yml  push-to-docker.yml  push-to-dockerhub.yml  push-to-ghcr.yml
1_setting_up/: index.html
2_open_ai/: index.html
5_pydantic/: index.html
Handson/: 2_open_ai.ipynb  5_pydantic.ipynb
Handson/haiku/: real_haiku.txt
Slides/: 3_Ethics.pptx  4_SMLandQuantization.pptx  5.1_RAG.pptx  6_WrapUp.pptx
abstract-application/: app.py
agents/: agent.py  vision_agent.py
datasets/: test.txt
docs/: 1-introduction.md  10-prompting.md  11-practicalities.md  1_setting_up.md  2-hardware.md  2_open_ai.ipynb  3-tokenization.md  4-embeddings.md  5-attention.md  5_pydantic.ipynb  6-sampling.md  6_states.ipynb  7-finetuning.md  8-interacting.md  8_llamaindex.ipynb  9-rag.md  ethics.md  index.md  notebook_example.ipynb  p1_doc-validation.ipynb
embedder/: embedder.py  embedding_dataset.py  imdb_classification.py
large-language-models/: utils.py
layouts/: slide_template.html
notebook_example/: index.html
notebooks/: BERT_classification.ipynb  agent.py  finetune-gpt.ipynb  finetuning.ipynb  introduction_to_APIs.ipynb  introduction_to_OpenAI.ipynb  introduction_to_stablediffusion.ipynb  llama.ipynb  quantization.ipynb  vision_analysis.ipynb
overrides/: main.html
prompts/: datastore_system_prompt.jinja  datastore_user_prompt.jinja  extraction_system.jinja
quick_RAG/: README.md
sample_data/: cleaned_test_text_1_QA.txt  cleaned_test_text_1_QA_special.txt
search/: search_index.json
slides/: 1-intro.pptx  10-practicalities.pptx  4-embeddings.pptx  7-finetuning.pptx  9-rag.pptx  random-figures.pptx
(+75 files in other folders)
