[tool.poetry]
name = "large-language-models"
version = "0.1.0"
description = "A package containing llm agents"
authors = ["rkdan <rkd43@cam.ac.uk>"]
license = "mit"
readme = "README.md"
packages = [{include = "embedder"}, {include = "agents"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
torchvision = "^0.16.1"
huggingface-hub = "^0.19.4"
accelerate = "^0.25.0"
diffusers = "^0.24.0"
langchain = "^0.0.345"
matplotlib = "^3.8.2"
openai = "^1.3.5"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"
datasets = "^2.15.0"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
